Change some colors

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="/assets/styles.css" />
   </head>
-  <body class="bg-slate-950 text-slate-100 min-h-screen flex flex-col">
+  <body class="bg-white text-slate-900 min-h-screen flex flex-col">
     {% include "header.html" %}
     <main class="flex-1 w-full">
       <section class="w-full max-w-5xl mx-auto px-6 py-10 space-y-10">
