Start working on finished cases page

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -7,6 +7,7 @@
     <nav class="flex flex-wrap items-center gap-4 text-md font-medium">
       <a class="text-white hover:text-[#0693e3] transition" href="/">Home</a>
       <a class="text-white hover:text-[#0693e3] transition" href="/resume/">Resume</a>
+      <a class="text-white hover:text-[#0693e3] transition" href="/finished-cases/">Finished Cases</a>
       <a class="text-white hover:text-[#0693e3] transition" href="/contact/">Contact</a>
     </nav>
   </div>
