--- a/src/finished-cases/case.njk
+++ b/src/finished-cases/case.njk
@@ -14,7 +14,7 @@ permalink: "{{ finishedCase.link }}"
 
   <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
     {% for image in finishedCase.images %}
-      <div class="overflow-hidden rounded-[6px] shadow-sm shadow-slate-200">
+      <div class="overflow-hidden border border-slate-200">
         <img
           src="{{ image }}"
           alt="{{ finishedCase.name }} image {{ loop.index }}"
